feat(bookings): persons, relations, events resources
